--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="message">CHOOSE AN OPTION</div>
+        <div class="message"><h2>CHOOSE AN OPTION</h2></div>
         <div class="images">
             <div class="computer">
                 <img src="images/stoneComputer.png"/>
@@ -29,5 +29,52 @@
             <button type="button">SCISSORS</button>
         </div>
     </div>
+    <script>
+        const computer = document.querySelector(".computer img");
+const player = document.querySelector(".player img");
+const computerPoints = document.querySelector(".computerPoints");
+const playerPoints = document.querySelector(".playerPoints");
+const options = document.querySelectorAll(".options button");
+
+options.forEach((option) => {
+  option.addEventListener("click", () => {
+    computer.classList.add("shakeComputer");
+    player.classList.add("shakePlayer");
+
+    setTimeout(() => {
+      computer.classList.remove("shakeComputer");
+      player.classList.remove("shakePlayer");
+
+      player.src = "images/" + option.innerHTML + "Player.png";
+
+      const choice = ["STONE", "PAPER", "SCISSORS"];
+      let arrayNo = Math.floor(Math.random() * 3);
+      let computerChoice = choice[arrayNo];
+      computer.src = "images/" + computerChoice + "Computer.png";
+
+      let cPoints = parseInt(computerPoints.innerHTML);
+      let pPoints = parseInt(playerPoints.innerHTML);
+
+      if (option.innerHTML === "STONE") {
+        if (computerChoice === "PAPER")
+          computerPoints.innerHTML = cPoints + 1;
+        else if (computerChoice === "SCISSORS")
+          playerPoints.innerHTML = pPoints + 1;
+      } else if (option.innerHTML === "PAPER") {
+        if (computerChoice === "SCISSORS")
+          computerPoints.innerHTML = cPoints + 1;
+        else if (computerChoice === "STONE")
+          playerPoints.innerHTML = pPoints + 1;
+      } else {
+        if (computerChoice === "STONE")
+          computerPoints.innerHTML = cPoints + 1;
+        else if (computerChoice === "PAPER")
+          playerPoints.innerHTML = pPoints + 1;
+      }
+    }, 900);
+  });
+});
+    </script>
+
 </body>
 </html>
